Revision history for Ocsinventory::Agent

       * Change 'SERIAL' field name and add checksum for inventory XML CPUS section 
       * Now getting MANUFACTURER and SERIALNUMBER in Snmp/3375.pm
       * Add new fields in setSnmpLoadBalancer() method in Common.pm

2.0.x
       * Fix bug while sending ERR_DOWNLOAD_INFO message in Donwload.pm
       * Fix Bug #856161 about installer problems on MacOSX Tiger

2.0.1
       * New SNMP data using If_Mib.pm: IP address, netmask, gateway and routing informations
       * Use the "public" SNMP community if no community defined in OCS server configuration
       * Various bug fixes in Snmp.pm
       * New 2.0 MacOSX integration
       * Bug #798428 about standalone agent building
       * Change variable names to lowercase in Snmp/3375.pm
       * Fix a closedir omission in Solaris/Packages.pm
       * Modify releases tarball name when building it using make dist command
       * Various patches for CPU, Bios and Drives detection for HPUX systems     
       * Fix Bug #781732 about a missing chomp() in Processes.pm
 
2.0
       * Fix Bug #778692 about using authentication when sending messages in Download.pm
       * Patch from Yoann Le Bihan for Solaris zones support
       * Fix Bug #586321 about wrong version comparison in Vmsystem.pm
       * Bug #772436 about download end message report in Download.pm
       * Display support log received from PROLOG
       * Various patches for Snmp/9.pm module (Cisco)
       * Add --nolocal option to desactivate local mode even if it is set in config file or command line
       * Fix Bug #767290 about /etc/sysconfig/ocsinventory-agent server settings ignore (only for Redhat like distributions)
       * Only inventory vitualmachines which have an UUID in VirtualBox.pm to prevent inventoring USB devices or shared folders as virtualmachines
      
2.0 rc4