@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * Add new --ssl configuration option to enable or disable certificate check during SSL communications
        * Change 'SERIAL' field name and add checksum for inventory XML CPUS section 
        * Now getting MANUFACTURER and SERIALNUMBER in Snmp/3375.pm
        * Add new fields in setSnmpLoadBalancer() method in Common.pm
